--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<head>
-  
-  
-</head>
-
-<body>
-  
-  
-</body>
+<!DOCTYPE html>
+<html lang="fr" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link href ="styles.css" rel="stylesheet" type="text/css">
