--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link href ="styles.css" rel="stylesheet" type="text/css">
+    <h1>Convertisseur Binaire et Decimale</h1>
+    
     <p></p>
