--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href ="styles.css" rel="stylesheet" type="text/css">
+    <link href ="style.css" rel="stylesheet" type="text/css">
+  </heard>
+  </body>
+    </div>
       <center><h1>Convertisseur Binaire et Decimale</h1></center>
-    
-  </head>
+      <p></p>
+  </div>
+<script src ="main.js"></script>
+  </body>
 </html>
  
     
