--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire et Decimale</h1></center>
+      <input></input>
       <p></p>
   </div>
 <script src ="main.js"></script>
