--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire et Decimale</h1></center>
-      <input>Nombre binaire</input>
-      <p></p>
+      <p>Nombre binaire<input></input></p>
   </div>
 <script src ="main.js"></script>
   </body>
