--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire et Decimale</h1></center>
-      <p>Nombre binaire<input></input></p>
+      <p>Nombre décimal : <input></input></p>
+      <p>Nombre binaire : <input></input></p>
+      <p>Nombre héxadécimal : <input></input></p>
   </div>
 <script src ="main.js"></script>
   </body>
