--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire et Decimale</h1></center>
-      <p>Nombre décimal : <input></input></p>
-      <p>Nombre binaire : <input></input></p>
-      <p>Nombre héxadécimal : <input></input></p>
+      <p>Nombre décimal : <input type="text" id="dec" ></input><input type="button" onclick="decimal()" value="Submit"></p>
+      <p>Nombre binaire : <input type="text" id="bin" ></input><input type="button" onclick="binaire()" value="Submit"></p>
+      <p>Nombre héxadécimal : <input type="text" id="hex" ></input><input type="button" onclick="hexadecimal()" value="Submit"></p>
   </div>
 <script src ="main.js"></script>
   </body>
