--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire et Decimale</h1></center>
-      <p><input type="text" id="dec" value="Nombre décimal"></input><input type="button" onclick="decimal()" value="✔"></p>
-      <p><input type="text" id="bin" value="Nombre binaire"></input><input type="button" onclick="binaire()" value="✔"></p>
-      <p><input type="text" id="hex" value="Nombre héxadécimal"></input><input type="button" onclick="hexadecimal()" value="✔"></p>
+      <p>Nombre décimal : <input type="text" id="dec" ></input><input type="button" onclick="decimal()" value="✔"></p>
+      <p>Nombre binaire : <input type="text" id="bin"></input><input type="button" onclick="binaire()" value="✔"></p>
+      <p>Nombre héxadécimal : <input type="text" id="hex" ></input><input type="button" onclick="hexadecimal()" value="✔"></p>
   </div>
 <script src ="main.js"></script>
   </body>
