--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <p>Nombre décimal : <input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
       <p>Nombre binaire : <input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
       <p>Nombre héxadécimal : <input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
-      <p></p>
-      <p></p>
+      <p id="rep1"></p>
+      <p id="rep1"></p>
   </div>
 <script src ="main.js"></script>
   </body>
