--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire, Decimale et Hexadécimale</h1></center>
-      <p><white>Nombre décimal : <input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></white></p>
+      <p>Nombre décimal : <input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
       <p>Nombre binaire : <input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
       <p>Nombre héxadécimal : <input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
       <p id="rep1"></p>
