--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire, Decimale et Hexadécimale</h1></center>
-      <center><p>Nombre décimal :<input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
-      <p>Nombre binaire :<input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
-      <p>Nombre héxadécimal :<input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p></center>
+      <center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
+      <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
+      <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p></center>
       <p id="rep1"></p>
       <p id="rep2"></p>
   </div>
