--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </body>
     </div>
       <center><h1>Convertisseur Binaire, Decimale et Hexadécimale</h1></center>
-      <br><br><br><br><br><br><br><br><br><center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
+      <br><br><br><br><br><br><br><br><br><br><br><center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
       <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
       <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p></center>
       <p id="rep1"></p>
