--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     </div>
       <center><h1>Convertisseur Binaire, Decimale et Hexadécimale</h1></center>
       <br><br><br><br><br><br><br><br><br><br><br><center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
+      <p id="repDec"></p>
       <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
+      <p id="repBin"></p>
       <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p></center>
-      <p id="rep1"></p>
-      <p id="rep2"></p>
+      <p id="repHex"></p>
   </div>
 <script src ="main.js"></script>
   </body>
