--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </heard>
   </body>
     </div>
-      <center><h1>Convertisseur Binaire, Decimale et Hexadécimale</h1></center>
+      <center><h1><strong>Convertisseur Binaire, Decimale et Hexadécimale</strong></h1></center>
       <br><br><br><br><br><br><br><br><br><br><br><center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
       <p id="repDec"></p>
       <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
