--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p id="repHex"></p>
   </div>
 <script src ="main.js"></script>
-  <div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
+  <br><br><br><br><br><div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
   </body>
 </html>
  
