--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   </body>
     </div>
       <center><h1><strong>Convertisseur Binaire, Decimale et Hexadécimale</strong></h1></center>
-      <center><br><br><br><br><br><br><br><br><br><br><br><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
+      <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
       <p id="repDec"></p>
       <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
       <p id="repBin"></p>
