--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     </div>
       <center><h1><strong>Convertisseur Binaire, Decimale et Hexadécimale</strong></h1></center>
       <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <center><p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
-      <p id="repDec"></p>
-      <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
-      <p id="repBin"></p>
-      <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
-      <p id="repHex"></p>
-  </center>
-  </div>
-<script src ="main.js"></script>
-  <br><br><br><br><br><div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <center>
+        <p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
+        <p id="repDec"></p>
+        <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
+        <p id="repBin"></p>
+        <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
+        <p id="repHex"></p>
+      </center>
+    </div>
+    <br><br><br><br><br><div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
+
+
+  <script src ="main.js"></script>
   </body>
 </html>
  
