--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <p id="repHex"></p>
       </center>
     </div>
-    <br><br><br><br><br><div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
+    <br>
+    <br>
+    <br> 
+    <br>
+    <br>
+    <div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
 
 
   <script src ="main.js"></script>
