--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <br>
       <center>
         <p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
-        <p id="repDec"></p>
+        <p id="repDec"><strong></strong></p>
         <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
-        <p id="repBin"></p>
+        <p id="repBin"><strong></strong></p>
         <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
-        <p id="repHex"></p>
+        <p id="repHex"><strong></strong></p>
       </center>
     </div> 
     <br>
