--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div> 
     <br>
     <br>
-    <div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances :</a></div>
+    <div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances</a></div>
 
 
   <script src ="main.js"></script>
