--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link href ="style.css" rel="stylesheet" type="text/css">
-    <title>Convertisseur Binaire, Decimale et Hexadécimale</title> 
+    <title>Convertisseur Binaire, Decimal et Hexadécimal</title> 
   </heard>
   </body>
     </div>
-      <center><h1><strong>Convertisseur Binaire, Decimale et Hexadécimale</strong></h1></center>
+      <center><h1><strong>Convertisseur Binaire, Decimal et Hexadécimal</strong></h1></center>
       <br>
       <br>
       <br>
