--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
   <head>
+    <meta name="google-site-verification" content="googlebc82f8c0560e9b2a.html" />
     <meta charset="utf-8">
     <link href ="style.css" rel="stylesheet" type="text/css">
     <title>Convertisseur Binaire, Decimal et Hexadécimal</title> 
