--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link href ="style.css" rel="stylesheet" type="text/css">
     <title>Convertisseur Binaire, Decimal et Hexadécimal</title> 
-  </heard>
+  </head>
   </body>
     </div>
       <center><h1><strong>Convertisseur Binaire, Decimal et Hexadécimal</strong></h1></center>
