--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta name="google-site-verification" content="LV7NhMQcBAR3COJTBV54PQ6sDAtCVJXRuE_27MTooSQ" />
+    <meta name="msvalidate.01" content="D8D79F80251D0610AC64C3AA1B4929FB" />
     <meta charset="utf-8">
     <link href ="style.css" rel="stylesheet" type="text/css">
     <title>Convertisseur Binaire, Decimal et Hexadécimal</title> 
