--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <br>
       <br>
       <center>
-        <p>Nombre décimal :<br><input type="text" id="dec" ></input>  <input type="button" onclick="decimal()" value="✔"></p>
+        <p>Nombre décimal :<br><input type="text" id="dec" onkeydown="decimal()"></input>  <input type="button" onclick="decimal()" value="✔"></p>
         <p id="repDec"></p>
-        <p>Nombre binaire :<br><input type="text" id="bin"></input>  <input type="button" onclick="binaire()" value="✔"></p>
+        <p>Nombre binaire :<br><input type="text" id="bin" onkeydown="binaire()"></input>  <input type="button" onclick="binaire()" value="✔"></p>
         <p id="repBin"></p>
-        <p>Nombre héxadécimal :<br><input type="text" id="hex" >  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
+        <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal()">  </input><input type="button" onclick="hexadecimal()" value="✔"></p>
         <p id="repHex"></p>
       </center>
     </div> 
