--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   </body>
     </div>
-      <center><h1><strong>Convertisseur Binaire, Decimal et Hexadécimal</strong></h1></center>
+      <h1>Convertisseur Binaire, Decimal et Hexadécimal</h1>
       <br>
       <br>
       <br>
@@ -16,14 +16,12 @@
       <br>
       <br>
       <br>
-      <center>
-        <p>Nombre décimal :<br><input type="text" id="dec" onkeydown="decimal()"></input></p>
-        <p id="repDec"></p>
-        <p>Nombre binaire :<br><input type="text" id="bin" onkeydown="binaire()"></input></p>
-        <p id="repBin"></p>
-        <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal()"></p>
-        <p id="repHex"></p>
-      </center>
+      <p>Nombre décimal :<br><input type="text" id="dec" onkeydown="decimal()"></input></p>
+      <p id="repDec"></p>
+      <p>Nombre binaire :<br><input type="text" id="bin" onkeydown="binaire()"></input></p>
+      <p id="repBin"></p>
+      <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal()"></p>
+      <p id="repHex"></p>
     </div> 
     <br>
     <br>
