--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div> 
     <br>
     <br>
-    <div id="lien"><a href="https://moyenne-generale.netlify.app/" >Pour faire vos moyenne générale</a></div>
+    <div id="lien"><a href="https://moyenne-generale.netlify.app/" >Pour calculer vos moyennes générales</a></div>
     <div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances</a></div>
 
 
