--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <p id="repBin"></p>
       <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal()"></p>
       <p id="repHex"></p>
+      <p>Texte ASCII :<br><input type="text" id="ascii" onkeydown="ascii()"></p>
+      <p id="repAscii"></p>
     </div> 
     <br>
     <br>
