--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </div> 
     <br>
     <br>
-    <div id="lien"><a href="https://moyenne-generale.netlify.app/" >Pour calculer vos moyennes générales</a></div>
-    <div id="lien"><a href="https://compteur-vacances.netlify.app/" >Pour savoir dans combien de temps sont vos vacances</a></div>
+    <div id="lien"><a href="https://index-sites-internet.netlify.app/" >Pour decouvrir tous nos sites web</a></div>
 
 
   <script src ="main.js"></script>
