--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <br>
       <br>
       <br>
-      <p>Nombre décimal :<br><input type="text" id="dec" onkeydown="decimal()"></input></p>
+      <p>Nombre décimal :<br><input type="text" id="dec"</input></p>
       <p id="repDec"></p>
-      <p>Nombre binaire :<br><input type="text" id="bin" onkeydown="binaire()"></input></p>
+      <p>Nombre binaire :<br><input type="text" id="bin"></input></p>
       <p id="repBin"></p>
-      <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal()"></p>
+      <p>Nombre héxadécimal :<br><input type="text" id="hex"></p>
       <p id="repHex"></p>
-      <p>Texte ASCII :<br><input type="text" id="ascii" onkeydown="ascii()"></p>
+      <p>Texte ASCII :<br><input type="text" id="ascii"></p>
       <p id="repAscii"></p>
     </div> 
     <br>
