--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <br>
       <br>
       <br>
-      <p>Nombre décimal :<br><input type="text" id="dec"</input></p>
+      <p>Nombre décimal :<br><input type="number" id="dec"</input></p>
       <p id="repDec"></p>
-      <p>Nombre binaire :<br><input type="text" id="bin"></input></p>
+      <p>Nombre binaire :<br><input type="number" id="bin"></input></p>
       <p id="repBin"></p>
-      <p>Nombre héxadécimal :<br><input type="text" id="hex"></p>
+      <p>Nombre héxadécimal :<br><input type="number" id="hex"></p>
       <p id="repHex"></p>
       <p>Texte ASCII :<br><input type="text" id="ascii"></p>
       <p id="repAscii"></p>
