--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <br>
       <br>
       <br>
-      <p>Nombre décimal :<br><input type="number" id="dec"</input></p>
-      <p>Nombre binaire :<br><input type="number" id="bin"></input></p>
-      <p>Nombre héxadécimal :<br><input type="number" id="hex"></p>
-      <p>Texte ASCII :<br><input type="text" id="ascii"></p>
+      <p>Nombre décimal :<br><input type="number" id="dec" onkeydown="decimal(event);"></input></p>
+      <p>Nombre binaire :<br><input type="number" id="bin" onkeydown="binaire(event);"></input></p>
+      <p>Nombre héxadécimal :<br><input type="number" id="hex" onkeydown="hexadecimal(event);"></p>
+      <p>Texte ASCII :<br><input type="text" id="ascii" onkeydown="ascii(event);"></p>
     </div> 
     <br>
     <br>
