--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <br>
       <p>Nombre décimal :<br><input type="number" id="dec" onkeydown="decimal(event);"></input></p>
       <p>Nombre binaire :<br><input type="number" id="bin" onkeydown="binaire(event);"></input></p>
-      <p>Nombre héxadécimal :<br><input type="number" id="hex" onkeydown="hexadecimal(event);"></p>
+      <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal(event);"></p>
       <p>Texte ASCII :<br><input type="text" id="ascii" onkeydown="ascii(event);"></p>
     </div> 
     <br>
