--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K86GKG3DRJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K86GKG3DRJ');
+    </script>
     <meta name="google-site-verification" content="LV7NhMQcBAR3COJTBV54PQ6sDAtCVJXRuE_27MTooSQ" />
     <meta charset="utf-8">
     <link href ="style.css" rel="stylesheet" type="text/css">
