--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href ="style.css" rel="stylesheet" type="text/css">
     <title>Convertisseur Binaire, Decimal et Hexadécimal</title> 
   </head>
-  </body onkeydown="touche(event);">
+  <body onkeydown="touche(event);">
     </div>
       <h1>Convertisseur Binaire, Decimal et Hexadécimal</h1>
       <br>
