--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <br>
       <br>
       <br>
-      <p>Nombre décimal :<br><input type="number" id="dec" onkeydown="decimal(event);"></input><input type="button" value="✔" onclick="decimal(12);"></input></p>
-      <p>Nombre binaire :<br><input type="number" id="bin" onkeydown="binaire(event);"></input><input type="button" value="✔" onclick="binaire(12);"></input></p>
-      <p>Nombre héxadécimal :<br><input type="text" id="hex" onkeydown="hexadecimal(event);"><input type="button" value="✔" onclick="hexadecimal(12);"></input></p>
-      <p>Texte ASCII :<br><input type="text" id="ascii" onkeydown="ascii(event);"><input type="button" value="✔" onclick="ascii(12);"></input></p>
+      <p>Nombre décimal :<br><input type="number" id="dec" placeholder="Décimal" onkeydown="decimal(event);"></input><input type="button" value="✔" onclick="decimal(12);"></input></p>
+      <p>Nombre binaire :<br><input type="number" id="bin" placeholder="Binaire" onkeydown="binaire(event);"></input><input type="button" value="✔" onclick="binaire(12);"></input></p>
+      <p>Nombre héxadécimal :<br><input type="text" id="hex" placeholder="Héxadécimale" onkeydown="hexadecimal(event);"><input type="button" value="✔" onclick="hexadecimal(12);"></input></p>
+      <p>Texte ASCII :<br><input type="text" id="ascii" placeholder="Texte" onkeydown="ascii(event);"><input type="button" value="✔" onclick="ascii(12);"></input></p>
       <input type="button" onclick="erase()" value="Effacer"></input>
     </div> 
     <br>
